--- a/loading.html
+++ b/loading.html
@@ -62,13 +62,14 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
+        // CONFIGURACIÓN SINCRONIZADA CON TU PROYECTO
         const firebaseConfig = {
-            apiKey: "TU_API_KEY",
-            authDomain: "tu-proyecto.firebaseapp.com",
-            projectId: "tu-proyecto",
-            storageBucket: "tu-proyecto.appspot.com",
-            messagingSenderId: "tu-id",
-            appId: "tu-app-id"
+            apiKey: "AIzaSyAZHuvxrFGeUn_DbexfgbQw8IjP1xtoMnc",
+            authDomain: "ether-nexus-intranet.firebaseapp.com",
+            projectId: "ether-nexus-intranet",
+            storageBucket: "ether-nexus-intranet.firebasestorage.app",
+            messagingSenderId: "380189316193",
+            appId: "1:380189316193:web:a3f0f430c2e26f5e9e4620"
         };
 
         const app = initializeApp(firebaseConfig);
@@ -87,18 +88,22 @@
             if(i < messages.length) {
                 statusText.innerText = messages[i];
                 i++;
+            } else {
+                clearInterval(interval);
             }
         }, 600);
 
-        // Verificar si el usuario está realmente logueado antes de entrar al index
+        // LÓGICA DE REDIRECCIÓN CORREGIDA
         onAuthStateChanged(auth, (user) => {
             setTimeout(() => {
                 if (user) {
-                    window.location.href = "index.html";
+                    // Si hay usuario, vamos al espacio de trabajo (AJUSTA EL NOMBRE SI ES OTRO)
+                    window.location.href = "workspace.html"; 
                 } else {
-                    window.location.href = "auth.html"; // Si no hay sesión, regresa al login
+                    // Si no hay usuario, volvemos al login (index.html)
+                    window.location.href = "index.html"; 
                 }
-            }, 2600); // Espera a que termine la animación de la barra
+            }, 2800); 
         });
     </script>
 </body>
