--- a/loading.html
+++ b/loading.html
@@ -62,9 +62,9 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // CONFIGURACIÓN SINCRONIZADA CON TU PROYECTO
+        // CONFIGURACIÓN ACTUALIZADA CON LA LLAVE FUNCIONAL
         const firebaseConfig = {
-            apiKey: "AIzaSyAZHuvxrFGeUn_DbexfgbQw8IjP1xtoMnc",
+            apiKey: "AIzaSyDX7CbuvxbiNBhJS1mM9xmFiO5tCiFMUCI",
             authDomain: "ether-nexus-intranet.firebaseapp.com",
             projectId: "ether-nexus-intranet",
             storageBucket: "ether-nexus-intranet.firebasestorage.app",
@@ -93,17 +93,16 @@
             }
         }, 600);
 
-        // LÓGICA DE REDIRECCIÓN CORREGIDA
+        // LÓGICA DE REDIRECCIÓN BASADA EN ESTADO REAL
         onAuthStateChanged(auth, (user) => {
+            // Esperamos a que la animación de la barra termine (aprox 2.8s)
             setTimeout(() => {
                 if (user) {
-                    // Si hay usuario, vamos al espacio de trabajo (AJUSTA EL NOMBRE SI ES OTRO)
                     window.location.href = "workspace.html"; 
                 } else {
-                    // Si no hay usuario, volvemos al login (index.html)
                     window.location.href = "index.html"; 
                 }
-            }, 2800); 
+            }, 3000); 
         });
     </script>
 </body>
