--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
             updatePassword 
         } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // CONFIGURACIÓN ACTUALIZADA CON LA NUEVA API KEY
         const firebaseConfig = {
             apiKey: "AIzaSyDX7CbuvxbiNBhJS1mM9xmFiO5tCiFMUCI",
             authDomain: "ether-nexus-intranet.firebaseapp.com",
@@ -128,7 +127,6 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         
-        // Inicializar EmailJS con tu Public Key
         emailjs.init("jVFbff94NuuTI0jix"); 
 
         let isLogin = true;
@@ -163,9 +161,9 @@
             e.preventDefault();
             errorDiv.classList.add('hidden');
 
-            const email = emailInput.value;
+            const email = emailInput.value.trim();
             const password = passwordInput.value;
-            const fullName = document.getElementById('fullName').value;
+            const fullName = document.getElementById('fullName').value.trim();
 
             if (requiresPassChange) {
                 try {
@@ -173,7 +171,7 @@
                     await updatePassword(auth.currentUser, password);
                     window.location.href = "loading.html";
                 } catch (error) {
-                    errorDiv.innerText = "ERROR: MÍNIMO 6 CARACTERES O RE-INGRESE SESIÓN";
+                    errorDiv.innerText = "ERROR: MÍNIMO 6 CARACTERES";
                     errorDiv.classList.remove('hidden');
                     mainBtn.innerText = "CONFIRMAR Y ENTRAR";
                 }
@@ -195,7 +193,7 @@
                     document.getElementById('toggleContainer').classList.add('hidden');
 
                 } catch (error) {
-                    errorDiv.innerText = "FALLO DE SISTEMA: REVISE CREDENCIALES O LLAVE API";
+                    errorDiv.innerText = "CREDENCIALES INVÁLIDAS";
                     errorDiv.classList.remove('hidden');
                     mainBtn.innerText = "Ingresar";
                 }
@@ -211,26 +209,34 @@
                     const userCredential = await createUserWithEmailAndPassword(auth, email, tempPass);
                     await updateProfile(userCredential.user, { displayName: fullName });
 
-                    await emailjs.send("service_lcrwaff", "template_hr615us", {
-                        nombre_completo: fullName,
-                        email: email, 
-                        passcode: tempPass,
-                        link_ingreso: window.location.origin,
-                        time: new Date().toLocaleTimeString()
-                    });
+                    // ENVÍO DE EMAIL
+                    try {
+                        if (email) {
+                            await emailjs.send("service_lcrwaff", "template_hr615us", {
+                                nombre_completo: fullName,
+                                email: email, 
+                                passcode: tempPass,
+                                link_ingreso: window.location.origin,
+                                time: new Date().toLocaleTimeString()
+                            });
+                        }
+                    } catch (e) { 
+                        console.error("EmailJS Error:", e); 
+                    }
 
+                    // ÉXITO - Mostrar clave en pantalla pase lo que pase con el mail
                     formContainer.innerHTML = `
                         <div class="temp-pass-display">
                             <p class="text-[10px] text-indigo-400 mb-2 font-bold">REGISTRO COMPLETADO</p>
-                            <p class="text-[9px] text-gray-400 mb-4">ESTA ES TU CLAVE PROVISORIA:</p>
+                            <p class="text-[9px] text-gray-400 mb-4">COPIA TU CLAVE PROVISORIA:</p>
                             <h2 class="text-3xl font-mono font-bold tracking-[0.3em] text-white">${tempPass}</h2>
                         </div>
-                        <p class="text-[9px] text-center text-gray-500 mb-6 uppercase">Se ha enviado una copia a ${email}</p>
+                        <p class="text-[9px] text-center text-gray-500 mb-6 uppercase">IMPORTANTE: GUARDA TU CLAVE PARA INGRESAR</p>
                         <button onclick="location.reload()" class="btn-nexus">VOLVER AL LOGIN</button>
                     `;
 
                 } catch (error) {
-                    errorDiv.innerText = "FALLO: " + error.message;
+                    errorDiv.innerText = error.code === 'auth/email-already-in-use' ? "EL CORREO YA EXISTE" : "FALLO: " + error.code;
                     errorDiv.classList.remove('hidden');
                     mainBtn.innerText = "Registrar Equipo";
                     mainBtn.disabled = false;
