--- a/workspace.html
+++ b/workspace.html
@@ -52,10 +52,14 @@
             z-index: 0;
         }
 
+        /* Tus rutas de imágenes originales */
         .personal-card::before { background-image: url('coffe-office.jpg'); }
         .contract-card::before { background-image: url('contractor.jpg'); }
         .tools-card::before { background-image: url('workstation.jpg'); }
         .support-card::before { background-image: url('management-system.jpg'); }
+        /* Nuevas imágenes para los nuevos botones */
+        .training-card::before { background-image: url('https://images.unsplash.com/photo-1524178232363-1fb2b075b655?q=80'); }
+        .meet-card::before { background-image: url('https://images.unsplash.com/photo-1588196749597-9ff075ee6b5b?q=80'); }
 
         .icon-box:hover::before {
             filter: grayscale(0%) brightness(0.7);
@@ -99,6 +103,9 @@
                 <a href="datos-personales.html" class="block p-4 text-[10px] font-bold uppercase hover:bg-indigo-500 hover:text-white transition-all border-b border-white/5">
                     <i class="fas fa-user-edit mr-2"></i> Mis Datos
                 </a>
+                <a href="training.html" class="block p-4 text-[10px] font-bold uppercase hover:bg-indigo-500 hover:text-white transition-all border-b border-white/5">
+                    <i class="fas fa-graduation-cap mr-2"></i> Training & RRHH
+                </a>
                 <button id="logoutBtn" class="w-full text-left p-4 text-[10px] font-bold uppercase text-red-500 hover:bg-red-500 hover:text-white transition-all">
                     <i class="fas fa-power-off mr-2"></i> Cerrar Sesión
                 </button>
@@ -127,6 +134,17 @@
                     <i class="fas fa-file-contract"></i>
                     <span class="text-[10px] font-black uppercase tracking-[0.2em]">Contrato Legal</span>
                 </a>
+
+                <a href="training.html" class="icon-box training-card">
+                    <i class="fas fa-graduation-cap"></i>
+                    <span class="text-[10px] font-black uppercase tracking-[0.2em]">Training & RRHH</span>
+                </a>
+
+                <a href="training.html" class="icon-box meet-card">
+                    <i class="fas fa-video"></i>
+                    <span class="text-[10px] font-black uppercase tracking-[0.2em]">Nexus Meet</span>
+                </a>
+
                 <a href="herramientas.html" class="icon-box tools-card">
                     <i class="fas fa-tools"></i>
                     <span class="text-[10px] font-black uppercase tracking-[0.2em]">Herramientas</span>
@@ -148,7 +166,6 @@
         import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // CONFIGURACIÓN CON LA NUEVA API KEY
         const firebaseConfig = {
             apiKey: "AIzaSyDX7CbuvxbiNBhJS1mM9xmFiO5tCiFMUCI",
             authDomain: "ether-nexus-intranet.firebaseapp.com",
@@ -170,22 +187,17 @@
         onAuthStateChanged(auth, async (user) => {
             if (user) {
                 try {
-                    // Intentar obtener el nombre desde Firestore
                     const userDoc = await getDoc(doc(db, "users", user.uid));
                     let name = "";
-
                     if (userDoc.exists()) {
                         name = userDoc.data().nombre;
                     } else {
                         name = user.displayName || user.email.split('@')[0];
                     }
-
                     welcomeName.innerText = name;
                     userBadge.innerText = name;
-                    mainContent.style.opacity = "1"; // Mostrar contenido suavemente
-
+                    mainContent.style.opacity = "1";
                 } catch (error) {
-                    console.error("Error cargando perfil:", error);
                     welcomeName.innerText = user.email.split('@')[0];
                     mainContent.style.opacity = "1";
                 }
